# qber-forecasting

./: .gitignore  README.md  pyproject.toml  requirements.txt
datasets/: outliers_info.csv  qber-experiment.csv
deep_qber/: __init__.py  dataset.py  datasets.py  model.py  models.py  pyproject.toml  utils.py
deep_qber/deep_qber/: dataset.py
notebooks/: boosting.ipynb  catboost.ipynb  catboost_outlier_detection.ipynb  catboost_qber.ipynb  eda.ipynb  experiment_template.ipynb  feature_extraction_from_current_timepoint.ipynb  outlier_detection.ipynb  outlier_filtering.ipynb  qber_lstm.ipynb  qber_pipeline.ipynb
package/deep_qber/: dataset.py
research/deep_qber/: README.md  pyproject.toml
research/deep_qber/deep_qber/: model.py  utils.py
research/notebooks/: [qber]attn.ipynb  [qber]autoregressive.ipynb  [qber]catboost.ipynb  [qber]classic.ipynb  [qber]experiment_template.ipynb  [qber]linear_models.ipynb  [qber]linear_v2.ipynb  [qber]mlp.ipynb  [qber]nns.ipynb  [qber]polarizer_dataset.ipynb  [qber]polarizer_feature_importance.ipynb  [qber]window_refitting.ipynb  experiment_template.ipynb  qber_lstm.ipynb
research/scripts/: create_dataset.py
service/setup/: processing.py  test_cbm.py  test_client.py  train_cbm.py
service/setup/v2/: test_cbm.py
service/setup/v3/: test_client.py  train_composite.py
service/v1/: Dockerfile  chan_estimator_api.thrift  client_test.py  config.json  docker-compose.yaml  estimator.py  main.py  processing.py  pyproject.toml  requirements.txt  test.py  train.py
service/v2/: estimator.py
service/v3/: estimator.py  main.py
