[tool.poetry]
name = "qber-forecasting"
version = "0.1.0"
description = "Deep Learning models for quantum bit error rate (QBER) prediction."
authors = ["rmnigm"]
readme = "README.md"
packages = [{include = "qber_forecasting"}]

[tool.poetry.dependencies]
python = "3.10.6"
torch = "^2.0.0"
scikit-learn = ">=0.24, <2"
pandas = "^1"
catboost = ">=0.21"
numba = ">=0.53.1,<0.56.0"
seaborn = "^0.11.1"
numpy = "*"
scipy = "<1.8.0"
statsmodels = ">=0.12,<0.14"
matplotlib = "^3.7.1"
plotly = "^5.13.1"
jupyterlab = "^3.6.2"
wandb = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
