[tool.poetry]
name = "qber-forecasting"
version = "0.1.0"
description = "Deep Learning models for quantum bit error rate (QBER) prediction."
authors = ["rmnigm"]
readme = "README.md"
packages = [{include = "qber_forecasting"}]

[tool.poetry.dependencies]
python = "3.10.6"
torch = "^2.0.0"
scikit-learn = ">=0.24, <2"
pandas = "2"
catboost = ">=0.21"
numba = "0.56.4"
seaborn = "0.12.2"
numpy = "<1.24"
scipy = "1.10.1"
statsmodels = ">=0.12,<0.14"
matplotlib = "^3.7.1"
plotly = "5.14.1"
jupyterlab = "^3.6.2"
wandb = "^0.14.2"
pytorch-lightning = "^2.0.1.post0"
torchmetrics = "^0.11.4"
deep-qber = {path = "package"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
